<resources>
    <string name="app_name">Quiz Race</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up_welcome_text">Sign Up In</string>
    <string name="sign_up_dialog_title">Sign Up</string>
    <string name="total_score_title">Total Score: %1$d</string>
    <string name="hi_user_title">Hi %1$s</string>
    <string name="top_score_title">Top Score: %1$d</string>
    <string name="choose_question_category_title">Select Your Question Category:</string>
    <string name="science_category_title">Science</string>
    <string name="sport_category_title">Sport</string>
    <string name="technology_category_title">Technology</string>
    <string name="general_category_title">General</string>
    <string name="quiz_show_specification_category">Category: %1$s</string>
    <string name="quiz_show_specification_level">Difficulty: %1$s</string>
    <string name="quiz_show_specification_question_number">Question %1$d</string>
    <string name="quiz_show_specification_score">Your Score: %1$d</string>
    <string name="we_are_go_to_go">Ok! Now we are good to go</string>
    <string name="agree_to_terms_of_policy">You must agree to the terms of policy</string>
    <string name="passwords_dont_match">Passwords do NOT match</string>
    <string name="fill_in_all_fields">Please fill in the all fields below</string>
    <string name="is_true_answer" type="id">0</string>
    <string name="answer_uuid" type="id">1</string>
    <string name="difficulty_option" type="id">0</string>
    <string name="report_correct_answers">Correct Answers: %1$d</string>
    <string name="report_incorrect_answers">Incorrect Answers: %1$d</string>
    <string name="report_total_positive_points">Total Positive Points: %1$d</string>
    <string name="report_total_negetive_points">Total Negetive Points: %1$d</string>
    <string name="report_total_score">Total Score: %1$d</string>
    <string name="profile_toolbar_title">Your Profile</string>
    <string name="update_user_sucessful">Your Profile Is Updated</string>
    <string name="update_user_failed">Username Or Password already exist.</string>
    <string name="defalut_category_science">science</string>
    <string name="default_category_sport">sport</string>
    <string name="default_category_technology">technology</string>
    <string name="default_level_easy">easy</string>
    <string name="default_level_moderate">moderate</string>
    <string name="default_level_tough">tough</string>
    <string name="yellow_color">#FFFF33</string>
</resources>
