<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:layout_margin="26dp"
  tools:context=".mvc.controller.fragments.CategorySelectionFragment">

  <LinearLayout
    android:id="@+id/layout_user_specification"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignEnd="@id/txt_choose_category_title"
    android:layout_alignStart="@id/txt_choose_category_title"
    android:background="@drawable/border"
    android:orientation="vertical"

    android:padding="10dp">

    <TextView
      android:id="@+id/category_selection_user_welcome"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/hi_user_title"
      android:textColor="#3e3e3e"/>

    <TextView
      android:id="@+id/txt_category_selection_total_score"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="5dp"
      android:text="@string/total_score_title"
      android:textColor="#3e3e3e"/>

    <TextView
      android:id="@+id/txt_category_selection_top_score"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="5dp"
      android:text="@string/top_score_title"
      android:textColor="#3e3e3e"/>
  </LinearLayout>

  <TextView
    android:id="@+id/txt_choose_category_title"
    android:layout_width="match_parent"
    android:layout_height="35dp"
    android:layout_alignEnd="@id/category_grid_layout"
    android:layout_alignStart="@id/category_grid_layout"
    android:layout_below="@+id/layout_user_specification"
    android:layout_marginTop="20dp"
    android:gravity="center"
    android:text="@string/choose_question_category_title"
    android:textColor="@color/app_orange_color"
    android:textSize="16dp"/>

  <GridLayout
    android:id="@+id/category_grid_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@id/txt_choose_category_title"
    android:columnCount="2"
    android:rowCount="2"
    >

    <Button
      android:id="@+id/btn_sience_category"
      style="@style/category_select_button_style"
      android:layout_column="0"
      android:layout_row="0"
      android:background="@drawable/fill_border_science"
      android:tag="science"
      android:text="@string/science_category_title"
      android:textColor="#fff"/>

    <Button
      android:id="@+id/btn_sports_category"
      style="@style/category_select_button_style"
      android:layout_column="1"
      android:layout_row="0"
      android:background="@drawable/fill_border_sport"
      android:tag="sport"
      android:text="@string/sport_category_title"
      android:textColor="#fff"/>

    <Button
      android:id="@+id/btn_technology_category"
      style="@style/category_select_button_style"
      android:layout_column="0"
      android:layout_row="1"
      android:background="@drawable/fill_border_technology"
      android:tag="technology"
      android:text="@string/technology_category_title"
      android:textColor="#fff"/>

    <Button
      android:id="@+id/btn_general_category"
      style="@style/category_select_button_style"
      android:layout_gravity="fill"
      android:background="@drawable/fill_border_general"
      android:tag="general"
      android:text="@string/general_category_title"
      android:textColor="#fff"/>
  </GridLayout>



</RelativeLayout>